--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
     "multer": "^1.4.4",
     "validator": "^13.7.0"
